@@ -17,7 +17,7 @@ logger = logging.getLogger(__name__)
 class SourceEditor(QtWidgets.QPlainTextEdit):
     """ Source read-ony editor that can detect double clicks.
     """
-    sigDoubleClicked = QtCore.Signal(int, int)
+    sigTextClicked = QtCore.Signal(int, int)
     
     def __init__(self, parent=None):
         """ Constructor
@@ -35,39 +35,38 @@ class SourceEditor(QtWidgets.QPlainTextEdit):
         self.setStyleSheet("selection-color: black; selection-background-color: yellow;")
 
 
-    def mouseDoubleClickEvent(self, mouseEvent):
-        """ On mouse double-click the sigDoubleClicked(line_nr, column_nr) is emited.
+    def mousePressEvent(self, mouseEvent):
+        """ On mouse press the sigTextClicked(line_nr, column_nr) is emited.
         """
-        logger.debug("mouseDoubleClickEvent: ({}, {})".format(mouseEvent.x(), mouseEvent.y()))
         cursor = self.cursorForPosition(mouseEvent.pos())
         # Since the word wrap is off, there is one block par line. BLock numbers are zero-based
         # but code lines start at 1.
-        self.sigDoubleClicked.emit(cursor.blockNumber() + 1, cursor.positionInBlock())
+        self.sigTextClicked.emit(cursor.blockNumber() + 1, cursor.positionInBlock())
 
 
 
-    def select_text(self, from_line_col, to_line_col):
+    def select_text(self, from_pos, to_line_pos):
         """ Selects a text in the range from_line:col ... to_line:col
             
-            from_line_col and to_line_col should be a (line, column) tuple
-            If from_line_col is None, the selection starts at the beginning of the document
-            If to_line_col is None, the selection goes to the end of the document
+            from_pos and to_line_pos should be a (line, column) tuple
+            If from_pos is None, the selection starts at the beginning of the document
+            If to_line_pos is None, the selection goes to the end of the document
         """
         text_cursor = self.textCursor()
         
-        if from_line_col is None:
+        if from_pos is None:
             text_cursor.movePosition(QtGui.QTextCursor.Start, QtGui.QTextCursor.MoveAnchor)
         else:
-            from_line, from_col = from_line_col
+            from_line, from_col = from_pos
             # findBlockByLineNumber seems to be 0-based.
             from_text_block = self.document().findBlockByLineNumber(from_line - 1)
             from_pos = from_text_block.position() + from_col
             text_cursor.setPosition(from_pos, QtGui.QTextCursor.MoveAnchor)
 
-        if to_line_col is None:
+        if to_line_pos is None:
             text_cursor.movePosition(QtGui.QTextCursor.End, QtGui.QTextCursor.KeepAnchor)
         else:
-            to_line, to_col = to_line_col
+            to_line, to_col = to_line_pos
             to_text_block = self.document().findBlockByLineNumber(to_line - 1)
             to_pos = to_text_block.position() + to_col
             text_cursor.setPosition(to_pos, QtGui.QTextCursor.KeepAnchor)
